# coursework

./: tatus
AI标书/作业提交/共同部分/Rust课程/周冰/: Cargo.toml  demo.rs  lib.rs
AI标书/作业提交/共同部分/Rust课程/周贺浚/lesson 1/: main.rs
AI标书/作业提交/共同部分/Rust课程/周贺浚/lesson 2/: main.rs
AI标书/作业提交/共同部分/Rust课程/周贺浚/lesson 3/: main.rs
AI标书/作业提交/共同部分/Rust课程/周贺浚/lesson 4/: main.rs
AI标书/作业提交/共同部分/Rust课程/张伟涛/第一次课程作业/: main.rs
AI标书/作业提交/共同部分/Rust课程/曾俊桥/: Cargo.toml
AI标书/作业提交/共同部分/Rust课程/曾俊桥/examples/: demo.rs
AI标书/作业提交/共同部分/Rust课程/曾俊桥/lesson01/: main.rs
AI标书/作业提交/共同部分/Rust课程/曾俊桥/lesson02/: main.rs
AI标书/作业提交/共同部分/Rust课程/曾俊桥/lesson03/: main.rs
AI标书/作业提交/共同部分/Rust课程/曾俊桥/lesson04/: main.rs
AI标书/作业提交/共同部分/Rust课程/李俊成/: RUST课程作业.md
AI标书/作业提交/共同部分/Rust课程/李俊成/lesson_4/: Cargo.toml
AI标书/作业提交/共同部分/Rust课程/李俊成/rust作业/lesson_4/: Cargo.toml
AI标书/作业提交/共同部分/Rust课程/李俊成/rust作业/lesson_4/src/: main.rs
AI标书/作业提交/共同部分/Rust课程/林钦新/rust作业/: main1.rs  main2.rs
AI标书/作业提交/共同部分/Rust课程/欧俊濠/ai-client/: .env  Cargo.toml
AI标书/作业提交/共同部分/Rust课程/欧俊濠/ai-client/examples/: demo.rs
AI标书/作业提交/共同部分/Rust课程/欧俊濠/ai-client/src/: lib.rs
AI标书/作业提交/共同部分/Rust课程/程迪宏/lesson01/: main.rs
AI标书/作业提交/共同部分/Rust课程/袁潮城/: Cargo.toml  demo.rs  lib.rs
AI标书/课程资料/共同部分/Rust课程/: final-project.md  lesson-01-types-ownership.md  lesson-02-collections.md  lesson-03-error-trait.md  lesson-04-async-http.md
AI老师/个人介绍/: 刘金华.txt  吴敏希.txt  张伟涛.txt  张梓鸿.txt  曾俊桥.txt  欧俊濠.txt  王佳雯.txt  苏杰.txt  阳睿.txt  龙智森.txt
AI老师/模块文档/: 张伟涛-M6上下文记忆-模块文档.md  曾俊桥-薄弱点列表-模块文档.md  欧俊濠-虚拟AI教师形象优化.-模块文档.md  苏杰-AI备课.md  龙智森-模块文档.md
(+25 files in other folders)
