[package]
name = "ai-client"
version = "0.1.0"
edition = "2021"
description = "DashScope API client crate"
license = "MIT"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"