[package]
name = "ai-client"
version = "0.1.0"
edition = "2021"
description = "DashScope LLM API 封装库，支持普通对话与工具调用"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
