[package]
name = "ai-cli-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时，开启 macros 和 rt-multi-thread 特性
tokio = { version = "1", features = ["full"] }
# HTTP 客户端，开启 json 解析特性
reqwest = { version = "0.12", features = ["json"] }
# 序列化/反序列化工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 命令行解析，使用 derive 宏模式
clap = { version = "4.4", features = ["derive"] }
# 环境变量管理
dotenv = "0.15"
# 错误处理
anyhow = "1.0"